# carlosatt

./: manage.py  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_editora.py  0003_marca_delete_editora.py
sla/: asgi.py  settings.py  urls.py  wsgi.py
