[tool.poetry]
name = "carlosatt"
version = "0.1.0"
description = ""
authors = ["Admcauss-alt <cauayt251006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
